--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Trang HTML Đầu Tiên</title>
-    </head>
-<body>
-<h1>Xin Chào Đoàn Thương !!</h1>
-</body>
-</html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Trang HTML Đầu Tiên</title>
-    </head>
-<body>
-<h2>Ckuc pak snvv</h2>
-<h2>Ăn mau chóng lớn và bớt trẩu nha!!</h2>
-</body>
-</html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Trang HTML Đầu Tiên</title>
-    </head>
-<body>
-<img src="https://img3.thuthuatphanmem.vn/uploads/2019/07/04/hinh-anh-dong-danh-cho-sinh-nhat_114936536.gif" alt="IUIU" width="100" height="100">
-</body>
-</html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Trang HTML Đầu Tiên</title>
-    </head>
-<body>
-<font size="50" color="red">HAPPY BIRTHDAY !!!</font>
-
-</body>
-</html>
+<p>HIII</p>
