--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <center></br><font size="500" color="Amazon">HAPPY BIRTHDAY</font></center>
+</br><ul>
+  <li><font size="5" color="Purple5">Ckuc pa` snvv nhe !</font></li>
+  <li><font size="5" color="Purple5">Wan trong la` bot' ckau dum` kai'</font></li>
+  <li><font size="5" color="Purple5">=)))</font></li>
+</ul>
