--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <li><font size="5" color="Purple5">=)))</font></li>
 </ul>
 </br><center><img src="https://img3.thuthuatphanmem.vn/uploads/2019/07/04/hinh-anh-dong-danh-cho-sinh-nhat_114936536.gif" alt="HPPD" width="1080" height="500"></center>
-</br><audio>
+</br><audio autoplay>
 <iframe src="https://www.nhaccuatui.com/mh/auto/VyTnKTdr3u" width="620" height="382" frameborder="0" allowfullscreen allow="autoplay"></iframe>
 </audio>
